--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html > 
 <head>
   <meta charset="UTF-8">
-  <title>ML API</title>
+  <title>ML Project</title>
   <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Hind:300' rel='stylesheet' type='text/css'>
@@ -14,8 +14,9 @@
 	 <h2>Predict heart disease</h2>
    <br>
    <br>
-   Result : 
    {{ prediction_text }}
+   <br>
+   With 92.86% confidence
 
 <style>
   @import url(https://fonts.googleapis.com/css?family=Open+Sans);
